--- a/styles/global.css
+++ b/styles/global.css
@@ -15,7 +15,7 @@ li {
 }
 
 ul {
-  @apply list-disc pl-5;
+  @apply list-disc px-5;
 }
 
 .p-large {
@@ -27,11 +27,11 @@ ul {
 }
 
 .section {
-  @apply flex min-h-[calc(100vh-4rem)] snap-start justify-center overflow-y-auto overflow-x-hidden pt-20;
+  @apply flex snap-start justify-center overflow-y-auto overflow-x-hidden pt-20;
 }
 
 .container {
-  @apply mx-auto flex w-full max-w-7xl flex-col items-center p-4;
+  @apply mx-8 flex w-full flex-col items-center p-4 lg:mx-auto;
 }
 
 .hide-scrollbar::-webkit-scrollbar {
